# zencrop

./: .gitignore  AGENTS.md  AlwaysOnTop.cpp  AlwaysOnTop.h  CHANGELOG.md  CMakeLists.txt  OverlayWindow.cpp  OverlayWindow.h  PLAN.md  README.md  README_zh.md  ReparentWindow.cpp  ReparentWindow.h  Settings.cpp  Settings.h  SmartDetector.cpp  SmartDetector.h  Strings.cpp  Strings.h  ThumbnailWindow.cpp  ThumbnailWindow.h  Utils.cpp  Utils.h  ViewportWindow.cpp  ViewportWindow.h  app.manifest  app.rc  build.bat  compile_flags.txt  main.cpp  opencode.json  resources.rc  rest.txt
.opencode/commands/: UltraThink.md  opsx-release.md
doc/: CHANGELOG.md  README_zh.md  WinUI3_Reparenting_Fix.md  WinUI3_Reparenting_Fix_zh.md  thumbnail_scaling_hiding_technology_en.md  thumbnail_scaling_hiding_technology_zh.md  viewport_technology_report.md  viewport_technology_report_en.md
openspec/changes/archive/2026-04-20-add-thumbnail-taskbar-icon/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-20-add-thumbnail-taskbar-icon/specs/thumbnail-mode/: spec.md
openspec/specs/thumbnail-mode/: spec.md
